Implement timemark hashcode validation with Digidoc4j